<resources>
    <string name="app_name">Recc</string>
    <string name="slogan">Discover and enjoy</string>
    <string name="no_internet_msg">No internet connection</string>
    <string name="reconnect_cta"><u>Try connecting again</u></string>
    <string name="no_connection_interceptor_msg">No connection (Attempt %d of %d), retrying in %d seconds…</string>

    <!--AUTH-->
    <string name="login_cta">Log In</string>
    <string name="register_cta">Register</string>
    <string name="email_address_label">Email Address</string>
    <string name="email_address_error_label">Invalid email</string>
    <string name="password_label">Password</string>
    <string name="password_error_label">Invalid password</string>
    <string name="register_password_label">Enter a strong password</string>
    <string name="register_name_label">Enter your username</string>
    <string name="name_error_label">Invalid username</string>
    <string name="register_email_address_label">Enter your email address</string>
    <string name="register_instead_cta"><u>Don\'t have an account? Register instead</u></string>
    <string name="register_email_popup_error">Email is already in use</string>
    <string name="login_instead_cta"><u>Already have an account? Log in instead</u></string>
    <string name="invalid_credentials_label">email address and/or password incorrect</string>
    <string name="fetch_me_data_error_msg">Error! User data couldn\'t get fetched</string>
    <string name="failed_query_msg">Error connecting to server</string>

    <!--WELCOME-->
    <string name="artists_left_cta"><b>SELECT %d MORE ARTISTS</b></string>
    <string name="tracks_left_cta"><b>SELECT %d MORE TRACKS</b></string>
    <string name="one_artist_left_cta"><b>SELECT %d MORE ARTIST</b></string>
    <string name="one_track_left_cta"><b>SELECT %d MORE TRACK</b></string>
    <string name="continue_cta">CONTINUE</string>
    <string name="create_custom_playlist_cta">CREATE</string>

    <!--SETTINGS-->
    <string name="logout_cta">Log out</string>
    <string name="settings_spotify_title">SPOTIFY</string>
    <string name="settings_last_fm_title">LAST.FM</string>
    <string name="settings_recc_title">RECC</string>

    <!--SPOTIFY-->
    <string name="cta_connect_to_spotify">Connect to Spotify</string>
    <string name="cta_log_out_from_spotify">Log out from Spotify</string>

    <!--LAST.FM-->
    <string name="cta_connect_to_last_fm">Connect to Last.fm</string>
    <string name="cta_log_out_from_last_fm">Connect to Last.fm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Last.fm-->
    <string name="last_fm_api_error_msg">Couldn\'t connect to Last.fm API, try again in a while</string>

    <!--MENU-->
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_open_with_spotify">Open with Spotify</string>
    <string name="menu_three_dots">⋮</string>
    <string name="cta_create_new_playlist">+</string>
    <string name="cta_export_playlist_to_spotify">Export playlist to Spotify</string>
</resources>