<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.recc.recc_client.layout.settings.SettingsViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".layout.settings.SettingsFragment">

        <TextView
            android:id="@+id/tv_spotify_scrobbler_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_spotify_title"
            android:layout_marginTop="8dp"
            style="@style/FormItem.HeaderText"
            tools:textColor="@color/black"
            tools:text="@string/settings_spotify_title"/>

        <Button
            android:id="@+id/btn_connect_spotify"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/cta_connect_to_spotify"
            tools:text="@string/cta_connect_to_spotify" />

        <TextView
            android:id="@+id/tv_last_fm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_last_fm_title"
            android:layout_marginTop="8dp"
            style="@style/FormItem.HeaderText"
            tools:textColor="@color/black"
            tools:text="@string/settings_last_fm_title"/>

        <Button
            android:id="@+id/btn_connect_last_fm"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/cta_connect_to_last_fm"
            tools:text="@string/cta_connect_to_last_fm" />

        <TextView
            android:id="@+id/tv_recc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_recc_title"
            android:layout_marginTop="8dp"
            style="@style/FormItem.HeaderText"
            tools:textColor="@color/black"
            tools:text="@string/settings_recc_title"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/logout_cta"
            android:onClick="@{(view) -> viewModel.onBtnLogout()}"
            tools:text="@string/logout_cta" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
