<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.recc.recc_client.layout.auth.LoginViewModel" />
    </data>
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_form_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            style="@style/FormItem.Text"
            android:layout_marginTop="112dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address_label"
            tools:text="@string/email_address_label" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textEmailAddress"
            style="@style/FormItem.EditText"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="24dp"
            style="@style/FormItem.Text"
            android:text="@string/password_label" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/edit_text_background"
            style="@style/FormItem.EditText"
            android:inputType="textPassword"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:onClick="@{(view) -> viewModel.onBtnLogin()}"
            style="@style/FormItem.Button"
            android:text="@string/login_cta" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_account"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:onClick="@{(view) -> viewModel.onTvRegisterInstead()}"
            style="@style/FormItem.TextClickable"
            android:text="@string/register_instead_cta" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>